--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,7 @@
 {% include header.html %}
 
 <div class="container px-2 max-width: 100%">
-    <img class="img-fluid mx-auto d-block" src="/static/img/fraseratucsf.jpg" alt="Fraser at UCSF, in molecular form">
+    <img class="img-fluid mx-auto d-block" src="/static/img/Frontpage_1920x400.jpg" alt="Yong Wang at ZJU, in molecular form">
     <div class="row"> 
         <div class="col-sm-8">	
     	    <div class="jumbotron h-100">
