--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#052049">
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
     {% if page.group == 'news' %}
-    <link rel="alternate" type="application/atom+xml" title="Fraser Lab News Feed" href="/news.xml">
+    <link rel="alternate" type="application/atom+xml" title="Wang Lab News Feed" href="/news.xml">
     {% endif %}
 
     <!-- <link href="/static/css/bootstrap.css" rel="stylesheet"> -->
@@ -23,7 +23,7 @@
     <!-- Static navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #052049">
         <a class="navbar-brand" href="/">{{site.name}}</a>
-        <a href="http://www.ucsf.edu"><img class="inline-block navb-icon" src="/static/img/ucsf_logo_white.svg" alt="University of California, San Francisco (UCSF) logo"></a>
+        <a href="https://www.zju.edu.cn"><img class="inline-block navb-icon" src="/static/img/ZJUlogo.png" alt="Zhejiang University (ZJU) logo"></a>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
