--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,25 +1,23 @@
 <h2>Contact Us</h2>
 <p>
-James Fraser, Ph.D. <br>
-Professor <br>
-Department of Bioengineering and Therapeutic Sciences <br>
-California Institute of Quantitative Biosciences (QB3) <br>
+Yong Wang, Ph.D. <br>
+(Tenure-track) Associate Professor <br>
+College of Life Sciences <br>
+Institute of Quantitative Biology (IQB) <br>
+Shanghai Institute for Advanced Study <br>
 <br>
-email: jfraser (#!) fraserlab.com <br>
+email: wyongciac (#!) gmail.com <br>
 <br>
-Genentech Hall Room S472E (Office), S476 (Lab) <br>
-UCSF Mail Code 2240 <br>
-600 16th Street <br>
-San Francisco, CA 94158 <br>
+688 Yuhangtang Road, Hangzhou <br>
 </p>
 
 <p>
- <h3> Interested in joining the Fraser lab? </h3>
+ <h3> Interested in joining the Wang lab? </h3>
  We don’t generally post for specific positions, <a href="{{ site.url }}/join"><b>so please reach out!</b></a> We welcome applicants from all backgrounds.<br>
 </p>
 
 <p>
- <h3> See our <a href="{{ site.url }}/compact/">lab compact and philosophy</a></h3>
+ <h3> See our <a href="{{ site.url }}/compact/">lab philosophy</a></h3>
 
 </p>
 
