--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
     <hr>
     <div id="footer footer-fixed-bottom">
       <div class="container">
-        <p class="text-muted credit"> This website is open-source and available on <a href="https://github.com/yongwangCPH/yongwangcph.github.io">Github</a>.</p>
+        <p class="text-muted credit"> Welcome to join us <a href="https://github.com/yongwangCPH/yongwangcph.github.io">Github</a>.</p>
       </div>
     </div>
     
