--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
   <body>
 
     <!-- Static navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #636363">
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #ffffff">
         <a class="navbar-brand" href="/">{{site.name}}</a>
         <a href="https://www.zju.edu.cn"><img class="inline-block navb-icon" src="/static/img/yonghead2.jpeg" alt="Zhejiang University (ZJU) logo"></a>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
