--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,7 +23,7 @@
     <!-- Static navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #000000">
         <a class="navbar-brand" href="/">{{site.name}}</a>
-        <a href="https://www.zju.edu.cn"><img class="inline-block navb-icon" src="/static/img/yonghead2.jpeg" alt="Zhejiang University (ZJU) logo"></a>
+        <a href="https://www.zju.edu.cn"><img class="inline-block navb-icon" src="/static/img/ZJUlogo2.jpeg" alt="Zhejiang University (ZJU) logo"></a>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
