--- a/_includes/twitter_sidebar.html
+++ b/_includes/twitter_sidebar.html
@@ -1,3 +1,3 @@
-<a class="twitter-timeline" data-dnt="true" href="https://twitter.com/yongwangKU" data-widget-id="486191843416092672">Tweets by @yongwangKU</a>
+<a class="twitter-timeline" href="https://twitter.com/yongwangKU?ref_src=twsrc%5Etfw">Tweets by yongwangKU</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
