--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
     <hr>
     <div id="footer footer-fixed-bottom">
       <div class="container">
-        <p class="text-muted credit"> Welcome to join us <a href="https://github.com/yongwangCPH/yongwangcph.github.io">Github</a>.</p>
+        <p class="text-muted credit"> Yong Wang <a href="https://scholar.google.dk/citations?hl=en&user=LblGaZMAAAAJ">Google Scholar</a>.</p>
       </div>
     </div>
     
