--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
 
-<html lang="en">
-
-
-  <body>
-
-    <!-- Static navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #000000">
+    </div>
+    <hr>
+    <div id="footer footer-fixed-bottom">
+      <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #000000">
         <a class="navbar-brand" href="/">{{site.name}}</a>
         <a href="https://www.zju.edu.cn/english"><img class="inline-block navb-icon" src="/static/img/ZJUlogo3.png" alt="Zhejiang University (ZJU) logo"></a>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,6 +21,13 @@
           </ul>
         </div><!--/.nav-collapse -->
       </nav>
-
-    <div class="container">
-
+      </div>
+    </div>
+    
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="/static/js/jquery.min.js"></script>
+    <script src="/static/js/popper.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/parallax.min.js"></script>
+  </body>
+</html>
