--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes">
     <meta name="description" content="{{ site.description }}">
     <meta name="theme-color" content="#052049">
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
