--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -39,7 +39,7 @@ email: wyongciac (#!) gmail.com <br>
 
 <p>
  <h3> Interested in joining the Wang lab? </h3>
- We don’t generally post for specific positions, <a href="{{ site.url }}/join"><b>so please reach out!</b></a> We welcome applicants from all backgrounds.<br>
+ <a href="{{ site.url }}/join"><b>so please reach out!</b></a> We welcome applicants from all backgrounds.<br>
 </p>
 
 <p>
